Fixed endpoints: /fact-of-the-day/random /fact-of-the-day/random/by-tags to return one random fact with all possible translations