@@ -1016,7 +1016,14 @@ public class ModelUtils {
 
     public static FactOfTheDay getFactOfTheDay() {
         return new FactOfTheDay(1L, "Fact of the day",
-            Collections.singletonList(ModelUtils.getFactOfTheDayTranslation()), ZonedDateTime.now(),
+            List.of(ModelUtils.getFactOfTheDayTranslation(), FactOfTheDayTranslation.builder()
+                .id(2L)
+                .content("Контент")
+                .language(new Language(2L, "ua", Collections.emptyList(), Collections.emptyList(),
+                    Collections.emptyList()))
+                .factOfTheDay(null)
+                .build()),
+            ZonedDateTime.now(),
             Collections.emptySet());
     }
 
@@ -1026,8 +1033,7 @@ public class ModelUtils {
 
     public static FactOfTheDayPostDTO getFactOfTheDayPostDto() {
         return new FactOfTheDayPostDTO(1L, "name",
-            Collections.singletonList(
-                new FactOfTheDayTranslationEmbeddedPostDTO("content", AppConstant.DEFAULT_LANGUAGE_CODE)),
+            Collections.singletonList(getFactOfTheDayTranslationEmbeddedPostDTO()),
             Collections.singletonList(25L));
     }
 
@@ -1153,7 +1159,14 @@ public class ModelUtils {
     }
 
     public static FactOfTheDayTranslationDTO getFactOfTheDayTranslationDTO() {
-        return new FactOfTheDayTranslationDTO(1L, "content");
+        return new FactOfTheDayTranslationDTO(1L, List.of(getFactOfTheDayTranslationEmbeddedPostDTO()));
+    }
+
+    public static FactOfTheDayTranslationEmbeddedPostDTO getFactOfTheDayTranslationEmbeddedPostDTO() {
+        return FactOfTheDayTranslationEmbeddedPostDTO.builder()
+            .content("content")
+            .languageCode(AppConstant.DEFAULT_LANGUAGE_CODE)
+            .build();
     }
 
     public static LocationAddressAndGeoDto getLocationAddressAndGeoDto() {
